fixed button alignment

--- a/bceinit_1/style.css
+++ b/bceinit_1/style.css
@@ -127,7 +127,7 @@ body {
 
 .btn {
   margin-top: 50px;
-  width: 170px;
+  width: 200px;
   height: 50px;
   border: none;
   cursor: pointer;
